--- a/WebContent/app/index.html
+++ b/WebContent/app/index.html
@@ -1,77 +1,43 @@
 <!DOCTYPE HTML>
 <html ng-app="restConsumer">
 <head>
-<title>Get-Way</title>
-<link type="text/css" rel="stylesheet" href="style.css" />
-<script
-	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-<script src="chartjs-directive.js"></script>
-<script src="app.js"></script>
-<style>
-.chart div {
-	font: 10px sans-serif;
-	background-color: steelblue;
-	text-align: right;
-	padding: 3px;
-	margin: 1px;
-	color: white;
-}
-</style>
+	<title>Get-Way</title>
+	<link type="text/css" rel="stylesheet" href="bootstrap.css" />
+	<link type="text/css" rel="stylesheet" href="style.css" />
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+	<script src="Chart.js"></script>
+	<script src="angular-chart.js"></script>	
+	<script src="app.js"></script>
 </head>
 
 <body>
-	<h1>GATEWAY Application - REST Service Consumer</h1>
+	<h1>REST Service Consumer for IM</h1>
 	<div ng-controller="ConsumerController as Hello">
-		<input type="text" ng-model="inputValue" /> <input type="submit"
-			ng-click="submitValue()" />
-		<chart value="myChart"></chart>
-		<p>Index : {{greeting.calculatedIndex}}</p>
-		<p>Trade ID : {{greeting.tradeId}}</p>
-		<p>Settlement currency : {{greeting.settlementCurrency}}</p>
-		<p>Trade date : {{greeting.tradeDate}}</p>
-		<p>Product type : {{greeting.productType}}</p>
-		<p>Bucketed interest rate convexity :
-			{{greeting.bucketedInterestRateConvexity}}</p>
-		<p>Bucketed interest rate sensitivity :
-			{{greeting.bucketedInterestRateSensitivity}}</p>
+		<input type="text" ng-model="inputValue" /> 
+		<input type="submit" ng-click="submitValue()" />
+		
+		<br/>
+		
+		<p><b>Index</b> : {{calculatedIndex}}</p>
+		<p><b>Trade ID</b> : {{result.tradeId}}</p>
+		<p><b>Settlement currency</b> : {{result.settlementCurrency}}</p>
+		<p><b>Trade date</b> : {{result.tradeDate}}</p>
+		<p><b>Product type</b> : {{result.productType}}</p>
+		<p><b>Bucketed interest rate convexity</b> : {{birc}}</p>
+		<p><b>Bucketed interest rate sensitivity</b> : {{birs}}</p>
+		
+		<br/>	
+		<br/>
 
-<!-- 		<div class="chart"></div> -->
-<!-- 		<script src="http://d3js.org/d3.v3.min.js"></script> -->
-<!-- 		<script>
-// 			var data = [ 4, 8, -15, 16, 23, 42 ];
-
-// 			var x = d3.scale.linear().domain([ 0, d3.max(data) ]).range(
-// 					[ 0, 420 ]);
-
-// 			d3.select(".chart").selectAll("div").data(data).enter().append(
-// 					"div").style("width", function(d) {
-// 				return x(d) + "px";
-// 			}).text(function(d) {
-// 				return d;
-// 			});
-		</script> -->
-
-		<!--  <canvas id="clients" width="500" height="400"></canvas>
-		<script src="Chart.js"></script>
-		<script type="text/javascript">
-		var barData = {
-			    labels: ['Index', 'BIR Convexity', 'BIR Sensitivity', 'Germany', 'France', 'Japan'],
-			    datasets: [
-			        {
-			            label: '2010 customers #',
-			            fillColor: '#382765',
-			            data: [2500, 1902, 1041, 610, 1245, 952]
-			        },
-			        {
-			            label: '2014 customers #',
-			            fillColor: '#7BC225',
-			            data: [3104, 1689, 1318, 589, 1199, 1436]
-			        }
-			    ]
-			};
-		var context = document.getElementById('clients').getContext('2d');
-		var clientsChart = new Chart(context).Bar(barData);
-		</script> -->
+		<div class="row bottom">
+			<div class="col-sm-6">
+				<canvas id="line" class="chart chart-line" data="chartData" labels="labels"></canvas>
+			</div>
+			<div class="col-sm-6">
+				<canvas id="bar" class="chart chart-bar" data="chartData" labels="labels"></canvas>
+			</div>
+		</div>
 		
 	</div>
 
