--- a/WebContent/app/index.html
+++ b/WebContent/app/index.html
@@ -2,13 +2,13 @@
 <html ng-app="restConsumer">
 <head>
 	<title>Get-Way</title>
-	<link type="text/css" rel="stylesheet" href="bootstrap.css" />
-	<link type="text/css" rel="stylesheet" href="style.css" />
+	<link type="text/css" rel="stylesheet" href="style/bootstrap.css" />
+	<link type="text/css" rel="stylesheet" href="style/style.css" />
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-	<script src="Chart.js"></script>
-	<script src="angular-chart.js"></script>	
-	<script src="app.js"></script>
+	<script src="scripts/Chart.js"></script>
+	<script src="scripts/angular-chart.js"></script>	
+	<script src="scripts/app.js"></script>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
 		<input type="text" ng-model="inputValue" /> 
 		<input type="submit" ng-click="submitValue()" />
 		
-		<br/>
+		<hr/>
 		
 		<p><b>Index</b> : {{calculatedIndex}}</p>
 		<p><b>Trade ID</b> : {{result.tradeId}}</p>
