--- a/WebContent/Rest-Consumer/index.html
+++ b/WebContent/Rest-Consumer/index.html
@@ -12,10 +12,17 @@
 </head>
 
 <body>
-	<h1>REST Service Consumer for IM</h1>
+		<h1>REST Service Consumer for IM</h1>
+	<hr/>
 	<div ng-controller="ConsumerController as Hello">
-		<input type="text" ng-model="inputValue" /> 
-		<input type="submit" ng-click="submitValue()" />
+		<div class="row form-group">
+			<div class="col-sm-4">
+				<input type="text" ng-model="inputValue" class="form-control"/>
+			</div>
+			<div class="col-sm-2">
+				<input type="submit" ng-click="submitValue()" class="btn-primary form-control" />
+			</div>
+		</div>
 		
 		<hr/>
 		
@@ -28,7 +35,6 @@
 		<p><b>Bucketed interest rate sensitivity</b> : {{birs}}</p>
 		
 		<br/>	
-		<br/>
 
 		<div class="row bottom">
 			<div class="col-sm-6">
